// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Todo  1`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-0",
      "todoEdge": Object {
        "cursor": "MTA=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxMA==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Add Todo  2`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-1",
      "todoEdge": Object {
        "cursor": "MTE=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxMQ==",
          "text": "Get A Customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Add Todo  3`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-2",
      "todoEdge": Object {
        "cursor": "MTI=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxMg==",
          "text": "Get A Customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Add Todo  4`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-0",
      "todoEdge": Object {
        "cursor": "MTM=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxMw==",
          "text": "Get A Customer 1",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`Add Todo  5`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-1",
      "todoEdge": Object {
        "cursor": "MTQ=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxNA==",
          "text": "Get A Customer 2",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 2,
      },
    },
  },
}
`;

exports[`Add Todo  6`] = `
Object {
  "data": Object {
    "addTodo": Object {
      "clientMutationId": "AddToDo-2",
      "todoEdge": Object {
        "cursor": "MTU=",
        "node": Object {
          "complete": false,
          "id": "VG9kbzoxNQ==",
          "text": "Get A Customer 3",
        },
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Add User  1`] = `
Object {
  "data": Object {
    "addUser": Object {
      "clientMutationId": "user1",
      "id": "VXNlcjo1",
    },
  },
}
`;

exports[`Change Todo Status => false  1`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-0",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxMA==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user1@test.com",
        "id": "VXNlcjo1",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => false  2`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-1",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxMQ==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user1@test.com",
        "id": "VXNlcjo1",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => false  3`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-2",
      "todo": Object {
        "complete": false,
        "id": "VG9kbzoxMg==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 0,
        "email": "user1@test.com",
        "id": "VXNlcjo1",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  1`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-0",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxMA==",
        "text": "Get A Customer 1",
      },
      "user": Object {
        "completedCount": 1,
        "email": "user1@test.com",
        "id": "VXNlcjo1",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  2`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-1",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxMQ==",
        "text": "Get A Customer 2",
      },
      "user": Object {
        "completedCount": 2,
        "email": "user1@test.com",
        "id": "VXNlcjo1",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Change Todo Status => true  3`] = `
Object {
  "data": Object {
    "changeTodoStatus": Object {
      "clientMutationId": "ChangeTodoStatus-2",
      "todo": Object {
        "complete": true,
        "id": "VG9kbzoxMg==",
        "text": "Get A Customer 3",
      },
      "user": Object {
        "completedCount": 3,
        "email": "user1@test.com",
        "id": "VXNlcjo1",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Clear Completed Todos  1`] = `
Object {
  "data": Object {
    "clearCompletedTodos": Object {
      "clientMutationId": "ClearCompletedTodos",
      "deletedTodoIds": Array [
        "VG9kbzoxMA==",
        "VG9kbzoxMQ==",
        "VG9kbzoxMg==",
      ],
      "user": Object {
        "completedCount": 0,
        "id": "VXNlcjo1",
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`Mark All Todos  1`] = `
Object {
  "data": Object {
    "markAllTodos": Object {
      "changedTodos": Array [
        Object {
          "complete": true,
          "id": "VG9kbzoxMA==",
          "text": "Get A Customer 1",
        },
        Object {
          "complete": true,
          "id": "VG9kbzoxMQ==",
          "text": "Get A Customer 2",
        },
        Object {
          "complete": true,
          "id": "VG9kbzoxMg==",
          "text": "Get A Customer 3",
        },
      ],
      "clientMutationId": "MarkAllTodos",
      "user": Object {
        "completedCount": 3,
        "id": "VXNlcjo1",
        "totalCount": 3,
      },
    },
  },
}
`;

exports[`Query User  1`] = `
Object {
  "data": Object {
    "user": Object {
      "completedCount": 0,
      "email": "user1@test.com",
      "id": "VXNlcjo1",
      "todos": Object {
        "edges": Array [
          Object {
            "cursor": "MTA=",
            "node": Object {
              "__typename": "Todo",
              "complete": false,
              "id": "VG9kbzoxMA==",
            },
          },
          Object {
            "cursor": "MTE=",
            "node": Object {
              "__typename": "Todo",
              "complete": false,
              "id": "VG9kbzoxMQ==",
            },
          },
          Object {
            "cursor": "MTI=",
            "node": Object {
              "__typename": "Todo",
              "complete": false,
              "id": "VG9kbzoxMg==",
            },
          },
        ],
        "pageInfo": Object {
          "endCursor": "MTI=",
          "hasNextPage": true,
        },
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`Remove User  1`] = `
Object {
  "data": Object {
    "removeUser": Object {
      "clientMutationId": "user1",
    },
  },
}
`;

exports[`RemoveTodo  1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RemoveTodo  2`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RemoveTodo  3`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "locations": Array [
        Object {
          "column": 18,
          "line": 3,
        },
      ],
      "message": "Field RemoveTodoInput.userId of required type ID! was not provided.",
    },
  ],
}
`;

exports[`RenameTodo  1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;

exports[`RenameTodo  2`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;

exports[`RenameTodo  3`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "must be defined",
      "path": Array [
        "variable",
        "id",
      ],
    },
  ],
}
`;
